@@ -1,7 +1,6 @@
 <?xml version="1.0"?>
 <!--
- Copyright:	Inverse inc., 2008
- Author: 	Wolfgang Sourdeau <wsourdeau@inverse.ca>
+ Copyright:	Inverse inc., 2008-2014
  URL:		http://inverse.ca
   
  This file is part of "SOGo Connector" a Thunderbird extension.
