@@ -1,4 +1,6 @@
 notificationsTitle=SOGO :\u0020
+notificationsFailure=\u0020erreur,\u0020
+notificationsFailures=\u0020erreurs,\u0020
 notificationsUpload=\u0020envoi,\u0020
 notificationsUploads=\u0020envois,\u0020
 notificationsDownload=\u0020téléchargement,\u0020
