@@ -1,4 +1,6 @@
 notificationsTitle=SOGO :\u0020
+notificationsFailure=\u0020failure,\u0020
+notificationsFailures=\u0020failures,\u0020
 notificationsUpload=\u0020upload,\u0020
 notificationsUploads=\u0020uploads,\u0020
 notificationsDownload=\u0020download,\u0020
